--- a/form.html
+++ b/form.html
@@ -1,24 +1,33 @@
 <html>
+
 <body>
 
-<form method="post"
-<h><b>ISILAH FORM INI</b></h>
+<form method="post">
+<h style="font-size:40px;"><b> FORM <b></h>
+<br>
+
+<br>
+<b>Nama : </b>
+<input type="text"NAME="var1"size="20"value="Masukkan Nama Anda">
+<br><br>
+<b>Judul Buku : </b>
+<input type="text"NAME="var2"size="20"value="Masukkan Judul Buku">
 <br><br>
 
-<B>Nama:</B>
-<input type="text"NAME="var1"size="30"VALUE="">
+<b>Jenis Buku : </b>
+<br>
+<input type="radio"name"var3"value="r1">Fiksi 
+<br>
+<input type="radio"name"var3"value="r1">Nonfiksi
 <br><br>
 
-
-<B>Jenis Kelamin:</B>
+<B>Komentar Mengenai Buku Ini?</B>
 <BR>
-<INPUT TYPE="radio"NAME="var4"VALUE="r1">Pria
-<BR>
-<INPUT TYPE="radio"NAME="var4"VALUE="r2">Wanita
-<BR><BR>
+<TEXTAREA NAME="var4" COLS="30" ROWS="6">
+</TEXTAREA>
 
-<B>Nama email:</B>
-<input type="text"NAME="var1"size="30"VALUE="">
 <br><br>
+<INPUT TYPE="submit"NAME="var4"VALUE="Kirim">
 
-<INPUT TYPE="reset"NAME"="VAR6"VALUE="Clear">
+<INPUT TYPE="reset"NAME"="VAR5"VALUE="Clear">
+
