--- a/pendahuluan.html
+++ b/pendahuluan.html
@@ -1,14 +1,21 @@
 <html>
 <body>
 
-<h>PENDAHULUAN<h>
+<p>	Dengan mengucapkan puji dan syukut ke hadirat Tuhan Yang Maha Esa, penulis dapat menyelesaikan buku pegangan siswa mata pelajaran Kewarganegaraan SMP. Buku ini disusun berdasarkan kurikulum 2004.</p>
 
-<br><br>
+<p>	Penyusunan buku ini diupayakan menggunakan berbagai pendekatan sesuai dengan tujuan, fungsi, dan ruang lingkup pembelajaran Kewarganegaraan SMP. Adapun perimbangan dalam penulisan buku ini, diantara sebagai berikut. </p>
 
+<p>Materi setiap bab mengembangkan kemampuan memahami fakta, konsep, dan generalisasi tentang sistem berbangsa dan bernegara, yang bertujuan untuk</p>
+	
+	<li>melatih berpikir secara kritiis, rasional, dan kreatif.
+	<li>meningkatkan partisipasi warga negara secara aktif dan bertanggung jawab, serta bertindak secara cerdas. 
+	<li>melatih siswa untuk memiliki sikap demokratis sebagai warga negara Indonesia.
 
-Bullying merupakan salah satu tindakan tidak terpuji yang merugikan korbannya bahkan hingga mempengaruhi kesehatan psikisnya. Parahnya kasus bullying juga kerap ditemukan di sekolah.
-Salah satu contoh bullying yaitu menjauhi atau mengucilkan teman di sekolah. Dengan melakukan hal ini teman yang kamu jauhi akan merasa sedih, tertekan, dan membuatnya merasa tidak nyaman bahkan minder.
+<p>Mengembangkan prinsip pembelajaran Kewarganegaraan sebagai wahana kehidupan demokrasi yang menekankan pada pelatihan mengemukakan pendapat, menilai pendapat orang lain, menilai diri sendiri, dan berlatih mematuhi aturan yang telah disepakatati. Melalui latihan seperti itu, diharapkan siswa memiliki kebiasaan yang baik untuk mengemalkan norma, berdisiplin, dan bertanggung jawab sebagai anggota masyarakat dan warga negara. </p>
 
-Penting diketahui anak korban bullying ini mendapat perlindungan Undang-Undang. Kamu bisa terancam pidana jika nekat melakukan bullying.
+<p>Pengembangan model pengintegrasian materi budi pekerti ke dalam setiap bahan bahasan melalui pendekatan inkuiri, analisis budi pekerti, interptretasi, kegiatan, analisis kasus, dan interaksi. <p>
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY6kmT3dJve1qgieyBXXrqUp4el6-l8uWa6Qw0CjX3DVy0rFfSC2O1s8dvBZHcOANOoD8&usqp=CAU" width="700" height="500">
+<p>Penyajian materi pada setiap bab mengembangkan aspek pengetahuan, sikap, dan perilaku kehidupan sehari-hari. Dengan penyajian tersebut, diharapkan siswa dapat bermotivasi untuk selalu lebih aktif, baik pada saat berlangsungnya pembelajaran di kelas maupun pada saat belajar mandiri dan kelompok. </p>
+
+<p>Memperhatikan tingkat kemampuan dan pemahaman siswa terhadap materi yang disajikan. Selain itu, diupayakan untuk menarik dan membangkitkan minat baca pada siswa, seperti gambar, foto, dan kasus yang dilengkapi dengan pelatihan, dan kajian-kajian partisipasi. </p>
+
